Completed domain layer, included async configuration